# Point_Cloud_Process_SL

./: CMakeLists.txt  README.md  bunny-noise.pcd  main.cpp
01-Intro_and_basic_algorithm/: CMakeLists.txt
01-Intro_and_basic_algorithm/code/: add_noise.cpp  bil-csdn.cpp  bil_filter_NorBased.cpp  pca_normal_main.cpp  voxel_filter_main.cpp
01-Intro_and_basic_algorithm/code/include/: pca_normal.cpp  pca_normal.h  voxel_filter.cpp  voxel_filter.h
01-Intro_and_basic_algorithm/doc/: bunny-noise.pcd  bunny-nor.pcd  bunny-vox.pcd  scene-vox.pcd  scene.pcd
02-Nearest Neighbor Problem/code/: 2.cpp
02-Nearest-Neighbor-Problem/: CMakeLists.txt
02-Nearest-Neighbor-Problem/code/: kdtree-test-pc.cpp  kdtree-test.cpp  kdtree-vis.cpp  octree-easy.cpp  octree-test.cpp
02-Nearest-Neighbor-Problem/code/include/: kdtree.h  octree.h  result_set.h
03-Clustering/: CMakeLists.txt
03-Clustering/code/: GMM-test.cpp  K-means-K-test.cpp  K-means-test.cpp  Sepctral_Clustering_test.cpp
03-Clustering/code/include/: GMM.h  Kmeans-K.h  Kmeans.h  Spectral_Clustering.h
04-Model-Fitting/: CMakeLists.txt
04-Model-Fitting/code/: Dbscan-test.cpp  RANSAC-test.cpp
04-Model-Fitting/code/include/: RANSAC.h  dbscan.h  octree.h  result_set.h
04-Model-Fitting/doc/: bunny-double.pcd  narrow_scene-1k.pcd
07-Feature-Detection/: CMakeLists.txt
07-Feature-Detection/code/: ISS-test.cpp
07-Feature-Detection/code/include/: result_set.h
08-Feature-Description/: CMakeLists.txt
08-Feature-Description/code/: FPFH-test.cpp  test.cpp
08-Feature-Description/code/include/: ISS.h
08-Feature-Description/doc/: Armadillo-5k.pcd
09-Registration/: CMakeLists.txt
09-Registration/code/: ICP-test.cpp  Pipeline.cpp  RANSAC-Registration-test.cpp  Test.cpp  kdtree-knn-4d.cpp  pcl_icp.cpp
09-Registration/code/include/: FPFH.h  ICP.h  RANSAC-Registration.h  kdtree.h  octree.h
